# autobridge-win

./: index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  proxy.rs  state.rs
src/types/: index.ts
