[package]
name = "autobridge-win"
version = "0.1.0"
description = "AutoBridge Win — DoIP/WebSocket proxy for Windows"
authors = ["AutoBridge Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "autobridge_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "autobridge-win"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = [] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util     = "0.3"

chrono = { version = "0.4", features = ["serde"] }
log    = "0.4"
